k8s_deploy.yaml
apiVersion: v1
kind: Namespace

metadata:
   name: endgame
   labels:
      app.kubernetes.io/name: endgame-namespace
      app.kubernetes.io/version: v1
      app.kubernetes.io/part-of: endgame-bot

---
apiVersion: apps/v1
kind: Deployment

metadata:
   name: endgame-deploy
   namespace: endgame
   labels:
      app.kubernetes.io/name: endgame-deploy
      app.kubernetes.io/version: v1
      app.kubernetes.io/part-of: endgame-bot

spec:
   replicas: 1
   selector:
      matchLabels:
         app.kubernetes.io/name: endgame-pod
   template:
      metadata:
         name: endgame-pod
         labels:
            app.kubernetes.io/name: endgame-pod
            app.kubernetes.io/version: v1
            app.kubernetes.io/part-of: endgame-bot
      spec:
         containers:
         - name: endgame-container
           image: chukmunnlee/endgameready:v1
           ports:
           - name: pod-port
             containerPort: 3000

---

apiVersion: v1
kind: Service

metadata:
   name: endgame-svc
   namespace: endgame
   labels:
      app.kubernetes.io/name: endgame-svc
      app.kubernetes.io/version: v1
      app.kubernetes.io/part-of: endgame-bot

spec:
   type: ClusterIP
   selector:
      app.kubernetes.io/name: endgame-pod
   ports:
   - name: svc-port
     port: 3000
     targetPort: pod-port

---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
   name: endgame-ing
   namespace: endgame
   labels:
      app.kubernetes.io/name: endgame-ing
      app.kubernetes.io/version: v1
      app.kubernetes.io/part-of: endgame-bot

   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/use-regex: "true"

spec:
   rules:
   - http:
      paths:
      - path: /endgame/(.+)
        backend:
           serviceName: endgame-svc
           servicePort: svc-port
